--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   var fireballSize = 22;
   var wizardSpeed = 3;
   var wizardWidth = 70;
-  
+
   var getFireballSpeed = function(left) {
     return left ? 5 : 2;
   };
@@ -204,6 +204,8 @@
     return height * 2 / 3 - getWizardHeight();
   };
 </script>
+
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
