--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 </script>
 
 <script src="js/util.js"></script>
+<script src="js/coordinates.js"></script>
 <script src="js/api.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/render.js"></script>
