--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
 
 <script src="js/util.js"></script>
 <script src="js/coordinates.js"></script>
+<script src="js/wizard.js"></script>
 <script src="js/api.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/render.js"></script>
