--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
 <header>
-  <svg style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
+  <svg class="wizard-svg" style="display: none;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 62
         86">
     <g id="wizard">
       <g id="wizard-coat">
@@ -206,7 +206,10 @@
   };
 </script>
 
+<script src="js/stat.js"></script>
+<script src="js/game.js"></script>
 <script src="js/util.js"></script>
+<script src="js/svg2base64.js"></script>
 <script src="js/coordinates.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/api.js"></script>
@@ -216,8 +219,6 @@
 <script src="js/similar.js"></script>
 <script src="js/dialog.js"></script>
 <script src="js/avatar.js"></script>
-<script src="js/stat.js"></script>
-<script src="js/game.js"></script>
 
 </body>
 
